Initialize runtime for daemon ping