@@ -5,11 +5,13 @@ import java.io.PrintWriter
 import java.nio.file.Path
 import kotlin.io.path.createDirectory
 import kotlin.io.path.createDirectories
+import kotlin.io.path.exists
 import kotlin.io.path.pathString
 import kotlin.test.Test
 import kotlin.test.assertContains
 import kotlin.test.assertEquals
 import kotlin.test.assertNull
+import kotlin.test.assertTrue
 import org.junit.jupiter.api.io.TempDir
 
 class DaemonPingCommandTest {
@@ -36,6 +38,7 @@ class DaemonPingCommandTest {
         assertEquals(project, launcher.projectPath)
         assertEquals(Path.of("/opt/mps").toAbsolutePath(), launcher.mpsHome)
         assertContains(stdout.toString(), "\"status\":\"ok\"")
+        assertContains(stdout.toString(), "\"environmentReady\":true")
         assertContains(stdout.toString(), "\"projectPath\":\"${project.pathString}\"")
     }
 
@@ -106,6 +109,47 @@ class DaemonPingCommandTest {
         assertEquals(project, inferProjectPath(nested))
         assertNull(inferProjectPath(tempDir.resolve("outside").createDirectories()))
     }
+
+    @Test
+    fun `daemon launch uses user-level state outside project and MPS jvm settings`() {
+        val project = tempDir.resolve("project").createDirectories()
+        project.resolve(".mps").createDirectory()
+        val mpsHome = tempDir.resolve("mps").createDirectories()
+        java.nio.file.Files.writeString(mpsHome.resolve("build.properties"), "mps.build.number=2024.1\n")
+        mpsHome.resolve("lib/jna").createDirectories()
+        val daemonHome = tempDir.resolve("daemon-home")
+
+        val launch = SingleUseDaemonLaunch.prepare(
+            projectPath = project,
+            mpsHome = mpsHome,
+            environment = mapOf("MOPS_DAEMON_HOME" to daemonHome.pathString),
+        )
+
+        assertTrue(launch.stateDir.pathString.startsWith(daemonHome.pathString))
+        assertTrue(!launch.ideaConfigDir.pathString.startsWith(project.pathString))
+        assertTrue(launch.ideaConfigDir.exists())
+        assertTrue(launch.ideaSystemDir.exists())
+        assertContains(launch.jvmArgs, "-Didea.config.path=${launch.ideaConfigDir.pathString}")
+        assertContains(launch.jvmArgs, "-Didea.system.path=${launch.ideaSystemDir.pathString}")
+        assertContains(launch.jvmArgs, "-Djna.boot.library.path=${mpsHome.resolve("lib/jna").pathString}")
+        assertTrue(launch.jvmArgs.any { it.startsWith("--add-opens=java.base/java.lang=") })
+    }
+
+    @Test
+    fun `daemon launch still prepares a log path when mps home is invalid`() {
+        val project = tempDir.resolve("project").createDirectories()
+        project.resolve(".mps").createDirectory()
+        val mpsHome = tempDir.resolve("mps").createDirectories()
+
+        val launch = SingleUseDaemonLaunch.prepare(
+            projectPath = project,
+            mpsHome = mpsHome,
+            environment = mapOf("MOPS_DAEMON_HOME" to tempDir.resolve("daemon-home").pathString),
+        )
+
+        assertTrue(launch.logPath.parent.exists())
+        assertTrue(launch.jvmArgs.any { it.startsWith("--add-opens=java.base/java.lang=") })
+    }
 }
 
 private class RecordingLauncher : DaemonProcessLauncher {
@@ -121,6 +165,7 @@ private class RecordingLauncher : DaemonProcessLauncher {
             protocolVersion = 1,
             projectPath = projectPath.pathString,
             mpsHome = mpsHome.pathString,
+            environmentReady = true,
         )
     }
 }
